[package]
name = "asm-cli-rust"
version = "0.2.0"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"

[dependencies]
strum = "0.21.0"
strum_macros = "0.21"
num-traits = "0.2"
num-derive = "0.3"
chrono = "0.4"
chrono-tz = "0.5"
thiserror = "1.0.26"
regex = "1.5"
clap = "2.33"
capstone = "0.8.0"
hex = "0.3.2"
rustyline = "5"
ansi_term = "0.11.0"
maplit = "1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
structopt = "0.3"
anyhow = "1"
indexmap = "1.7"

[dependencies.unicorn]
version = "1.0.0"
path = "../unicorn/bindings/rust"

[dependencies.keystone]
version = "0.9.2"
path = "../keystone/bindings/rust"

[dependencies.nom]
version = "6"
features = ["regexp"]

[dependencies.lexical-core]
optional = true
version = ">= 0.6, < 0.8"