[package]
name = "asm-cli-rust"
version = "0.2.0"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"

[dependencies]
strum = "0.21.0"
strum_macros = "0.21"
num-traits = "0.2"
num-derive = "0.3"
chrono = "0.4"
chrono-tz = "0.5"
thiserror = "1.0.26"
regex = "1.5"
clap = { version = "4.0.26", features = ["derive"] }
capstone = "^0.9.0"
hex = "0.3.2"
rustyline = "9.1.0"
ansi_term = "0.11.0"
maplit = "1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
anyhow = "1"
indexmap = "1.7"
lazy_static = "1.4.0"
proc-macro2 = { version = "=1.0.93", features=["default", "proc-macro"] }
keystone = {git = "https://github.com/keystone-engine/keystone/", rev = "18569351000cf1b8bd1ea2cc8a02c2e17b76391f"}
unicorn-engine = {git = "https://github.com/unicorn-engine/unicorn/", rev = "8fb4b45f57557eb82a165ec24ed8a2aa2f9f201b"}

[dependencies.nom]
version = "6"
features = ["regexp"]

[dependencies.lexical-core]
optional = true
version = ">= 0.6, < 0.8"

